--- a/index.html
+++ b/index.html
@@ -567,19 +567,18 @@
 
 
 <!-- Teaser video-->
-<!-- <section class="hero teaser">
+<section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
-      </video>
+      <div class="publication-video">
+        <iframe src="http://www.youtube.com/watch?v=kqXR58dkyNk" frameborder="0" allowfullscreen></iframe>
+      </div>
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        This work proposes a statistical model of analogue film damage (e.g. scratches, dust, hairs), which can be then used to train and evaluate models at the task of analogue film damage detection and restoration at high resolutions.
       </h2>
     </div>
   </div>
-</section> -->
+</section>
 <!-- End teaser video -->
 
 <section class="hero teaser">
