--- a/index.html
+++ b/index.html
@@ -571,7 +571,10 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <div class="publication-video">
-        <iframe src="https://www.youtube.com/watch?v=kqXR58dkyNk" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kqXR58dkyNk?controls=0" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen></iframe>      
       </div>
       <h2 class="subtitle has-text-centered">
         This work proposes a statistical model of analogue film damage (e.g. scratches, dust, hairs), which can be then used to train and evaluate models at the task of analogue film damage detection and restoration at high resolutions.
