--- a/index.html
+++ b/index.html
@@ -364,6 +364,24 @@
     #accordion2 dt:hover {
       opacity: 0.8;
     }
+
+    .content ul ul {
+      margin-top: 0;
+      margin-bottom: 0 !important;
+      padding:0;
+    }
+
+    .content ul {
+      margin-top: 0;
+      margin-bottom: 0 !important;
+      padding:0;
+    }
+
+    .content li {
+      margin-top: 0;
+      margin-bottom: 0 !important;
+      padding:0;
+    }
     </style>
     <script>
       jQuery(document).ready(function($){
